--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,6 @@
 
     "search.exclude": {
         "modules/": true,
-        "dumps/": true,
-        "src/InstagramHeaders.h": true
+        "dumps/": true
     }
 }
