docs: add q&a link to issues

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+  - name: '💬 Browse Q&A'
+    url: https://github.com/SoCuul/SCInsta/discussions
+    about: Find answers to the most commonly asked questions
   - name: '❓ Need Help?'
     url: https://github.com/SoCuul/SCInsta/discussions
     about: Visit the SCInsta discussions form to get support
